fix readability

--- a/src/Components/Epic.css
+++ b/src/Components/Epic.css
@@ -40,5 +40,5 @@
     padding-top: 0;
 }
 .epic__actions button {
-    margin-right: 1rem;
+    margin-right: .5rem;
 }
